--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
-name: "AthenaClickology"
-title: "AthenaClickology"
-description: "Maximize your online potential with actionable tips and strategies."
+name: "hijiduatilu17tambahsabelas"
+title: "hijiduatilu17tambahsabelas"
+description: "Master the art of attracting, engaging, and retaining customers online."
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl: /
